match3/src/snapshots/match3__tests__middle_of_a_line.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Should match groups in a middle of a line
Board: 
╭─────╮
│grrrb│
╰─────╯
Match #0:
╭─────╮
│ rrr │
╰─────╯
Remaining cells:
╭─────╮
│g   b│
╰─────╯
