match3/src/snapshots/match3__tests__valid_h_invalid_v.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Should match valid horizontal while not matching invalid vertical
Board: 
╭───╮
│rrr│
│r--│
│---│
╰───╯
Match #0:
╭───╮
│rrr│
│   │
│   │
╰───╯
Remaining cells:
╭───╮
│   │
│r--│
│---│
╰───╯
