match3/src/snapshots/match3__tests__valid_v_invalid_h.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Should match valid vertical while not matching invalid horizontal
Board: 
╭───╮
│rr-│
│r--│
│r--│
╰───╯
Match #0:
╭───╮
│r  │
│r  │
│r  │
╰───╯
Remaining cells:
╭───╮
│ r-│
│ --│
│ --│
╰───╯
