match3/src/snapshots/match3__tests__vertical_line.txt.snap
---
source: match3/src/tests.rs
expression: "visualize_snapshot(name, board, matches, false)"
---
Vertical Line
Board: 
╭─╮
│r│
│r│
│r│
╰─╯
Match #0:
╭─╮
│r│
│r│
│r│
╰─╯
Remaining cells:
╭─╮
│ │
│ │
│ │
╰─╯
